--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -4,3 +4,8 @@ kind: Kustomization
 
 resources:
   - https://github.com/cert-manager/cert-manager/releases/download/v1.19.2/cert-manager.yaml
+  - istio-system.yaml
+  - metallb-system.yaml
+  - reloader.yaml
+  - sops-secrets-operator.yaml
+  - traefik.yaml
