--- a/infrastructure/controllers/sops-secrets-operator.yaml
+++ b/infrastructure/controllers/sops-secrets-operator.yaml
@@ -1,5 +1,22 @@
 # yamllint disable rule:line-length
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: sops
+  namespace: flux-system
+spec:
+  interval: 1h
+  url: https://isindir.github.io/sops-secrets-operator/
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    istio-injection: disabled
+    pod-security.kubernetes.io/enforce: restricted
+  name: sops
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
