--- a/clusters/tombstone/flux-system/gotk-sync.yaml
+++ b/clusters/tombstone/flux-system/gotk-sync.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 1m0s
   ref:
     branch: main
-  url: https://github.com/nosborn/deployments.git
+  url: https://github.com/nosborn/flux-system.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
