--- a/infrastructure/controllers/sops-secrets-operator.yaml
+++ b/infrastructure/controllers/sops-secrets-operator.yaml
@@ -32,7 +32,7 @@ spec:
         namespace: flux-system
       version: 0.25.0
   install:
-    crds: Skip
+    crds: Create
     remediation:
       retries: 3
   interval: 1h
@@ -53,7 +53,7 @@ spec:
             target:
               kind: Deployment
   upgrade:
-    crds: Skip
+    crds: CreateReplace
   values:
     extraEnv:
       - name: SOPS_AGE_KEY_FILE
