--- a/infrastructure/configs/cert-manager.yaml
+++ b/infrastructure/configs/cert-manager.yaml
@@ -1,41 +1,41 @@
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-production
-spec:
-  acme:
-    email: certificates@osborn.io
-    preferredChain: ""
-    privateKeySecretRef:
-      name: letsencrypt-production
-    server: https://acme-v02.api.letsencrypt.org/directory
-    solvers:
-      - http01:
-          gatewayHTTPRoute:
-            parentRefs:
-              - kind: Gateway
-                name: ingress
-                namespace: traefik
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-staging
-spec:
-  acme:
-    email: certificates@osborn.io
-    preferredChain: ""
-    privateKeySecretRef:
-      name: letsencrypt-staging
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
-    solvers:
-      - http01:
-          gatewayHTTPRoute:
-            parentRefs:
-              - kind: Gateway
-                name: ingress
-                namespace: traefik
+# ---
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: letsencrypt-production
+# spec:
+#   acme:
+#     email: certificates@osborn.io
+#     preferredChain: ""
+#     privateKeySecretRef:
+#       name: letsencrypt-production
+#     server: https://acme-v02.api.letsencrypt.org/directory
+#     solvers:
+#       - http01:
+#           gatewayHTTPRoute:
+#             parentRefs:
+#               - kind: Gateway
+#                 name: ingress
+#                 namespace: traefik
+# ---
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: letsencrypt-staging
+# spec:
+#   acme:
+#     email: certificates@osborn.io
+#     preferredChain: ""
+#     privateKeySecretRef:
+#       name: letsencrypt-staging
+#     server: https://acme-staging-v02.api.letsencrypt.org/directory
+#     solvers:
+#       - http01:
+#           gatewayHTTPRoute:
+#             parentRefs:
+#               - kind: Gateway
+#                 name: ingress
+#                 namespace: traefik
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
