--- a/infrastructure/configs/traefik.yaml
+++ b/infrastructure/configs/traefik.yaml
@@ -13,28 +13,6 @@ spec:
   secretName: traefik-dashboard-tls
 ---
 apiVersion: gateway.networking.k8s.io/v1
-kind: Gateway
-metadata:
-  name: ingress
-  namespace: traefik
-spec:
-  gatewayClassName: traefik
-  listeners:
-    - allowedRoutes:
-        namespaces:
-          from: All
-      name: http
-      port: 8000
-      protocol: HTTP
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: GatewayClass
-metadata:
-  name: traefik
-spec:
-  controllerName: traefik.io/gateway-controller
----
-apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: https-redirect
@@ -50,28 +28,28 @@ spec:
             scheme: https
             statusCode: 301
           type: RequestRedirect
----
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: traefik-dashboard
-  namespace: traefik
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - kind: Rule
-      match: Host(`traefik.home.arpa`)
-      middlewares:
-        - name: ip-allowlist
-          namespace: traefik
-        - name: security-headers
-          namespace: traefik
-      services:
-        - kind: TraefikService
-          name: api@internal
-  tls:
-    secretName: traefik-dashboard-tls
+# ---
+# apiVersion: traefik.io/v1alpha1
+# kind: IngressRoute
+# metadata:
+#   name: traefik-dashboard
+#   namespace: traefik
+# spec:
+#   entryPoints:
+#     - websecure
+#   routes:
+#     - kind: Rule
+#       match: Host(`traefik.home.arpa`)
+#       middlewares:
+#         - name: ip-allowlist
+#           namespace: traefik
+#         - name: security-headers
+#           namespace: traefik
+#       services:
+#         - kind: TraefikService
+#           name: api@internal
+#   tls:
+#     secretName: traefik-dashboard-tls
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
