Enable kiali and redirector apps

--- a/infrastructure/configs/traefik.yaml
+++ b/infrastructure/configs/traefik.yaml
@@ -20,7 +20,7 @@ metadata:
 spec:
   parentRefs:
     - kind: Gateway
-      name: ingress
+      name: traefik-gateway
       sectionName: http
   rules:
     - filters:
