--- a/apps/base/kiali/kustomization.yaml
+++ b/apps/base/kiali/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../base/kiali
-  - ../base/redirector
+  - resources/helmrelease.yaml
+  - resources/helmrepository.yaml
