Reorder metallb resources

--- a/apps/base/redirector/kustomization.yaml
+++ b/apps/base/redirector/kustomization.yaml
@@ -8,9 +8,10 @@ resources:
   - resources/certificate.yaml
   - resources/deployment.yaml
   - resources/ingressroute.yaml
+  - resources/middleware.yaml
   - resources/namespace.yaml
   - resources/networkpolicy.yaml
-  - resources/peerauthentication.yaml
+  # - resources/peerauthentication.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
 
