--- a/infrastructure/configs/traefik.yaml
+++ b/infrastructure/configs/traefik.yaml
@@ -21,7 +21,7 @@ spec:
   parentRefs:
     - kind: Gateway
       name: traefik-gateway
-      sectionName: http
+      sectionName: websecure
   rules:
     - filters:
         - requestRedirect:
