--- a/clusters/tombstone/infrastructure.yaml
+++ b/clusters/tombstone/infrastructure.yaml
@@ -7,6 +7,24 @@ metadata:
 spec:
   interval: 1h
   path: ./infrastructure/controllers
+  prune: true
+  retryInterval: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  timeout: 5m
+  # wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: infra-configs
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: infra-controllers
+  interval: 1h
   patches:
     - patch: |-
         - op: replace
@@ -25,24 +43,6 @@ spec:
         #     kind: IngressRoute
         #     name: traefik-dashboard
         #     namespace: traefik
-  prune: true
-  retryInterval: 2m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-    namespace: flux-system
-  timeout: 5m
-  wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: infra-configs
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: infra-controllers
-  interval: 1h
   path: ./infrastructure/configs
   prune: true
   sourceRef:
