Set externalTrafficPolicy for Traefik

--- a/infrastructure/configs/traefik.yaml
+++ b/infrastructure/configs/traefik.yaml
@@ -21,7 +21,7 @@ spec:
   parentRefs:
     - kind: Gateway
       name: traefik-gateway
-      sectionName: websecure
+      sectionName: web
   rules:
     - filters:
         - requestRedirect:
