--- a/apps/base/redirector/configs/nginx.conf
+++ b/apps/base/redirector/configs/nginx.conf
@@ -19,7 +19,23 @@ http {
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
 
-  server {
+  server { # Instagram
+    listen 8080;
+    server_name instagram.com www.instagram.com;
+
+    add_header Referrer-Policy "no-referrer" always;
+    return 301 https://imginn.com$request_uri;
+  }
+
+  server { # Medium
+    listen 8080;
+    server_name medium.com *.medium.com;
+
+    add_header Referrer-Policy "no-referrer" always;
+    return 301 https://scribe.rip$request_uri;
+  }
+
+  server { # Skimresources
     listen 8080;
     server_name go.skimresources.com;
 
@@ -30,23 +46,7 @@ http {
     }
   }
 
-  server {
-    listen 8080;
-    server_name instagram.com *.instagram.com;
-
-    add_header Referrer-Policy "no-referrer" always;
-    return 301 https://imginn.com$request_uri;
-  }
-
-  server {
-    listen 8080;
-    server_name medium.com *.medium.com;
-
-    add_header Referrer-Policy "no-referrer" always;
-    return 301 https://scribe.rip$request_uri;
-  }
-
-  server {
+  server { # Twitter
     listen 8080;
     server_name twitter.com *.twitter.com;
     server_name x.com *.x.com;
