--- a/apps/base/redirector/kustomization.yaml
+++ b/apps/base/redirector/kustomization.yaml
@@ -7,6 +7,7 @@ namespace: redirector
 resources:
   - resources/certificate.yaml
   - resources/deployment.yaml
+  - resources/httproute.yaml
   - resources/ingressroute.yaml
   - resources/middleware.yaml
   - resources/namespace.yaml
