--- a/infrastructure/configs/traefik.yaml
+++ b/infrastructure/configs/traefik.yaml
@@ -12,6 +12,23 @@ spec:
     name: ownca
   secretName: traefik-dashboard-tls
 ---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: https-redirect
+  namespace: traefik
+spec:
+  parentRefs:
+    - kind: Gateway
+      name: traefik-gateway
+      sectionName: web
+  rules:
+    - filters:
+        - requestRedirect:
+            scheme: https
+            statusCode: 301
+          type: RequestRedirect
+---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
