--- a/apps/base/immich/kustomization.yaml
+++ b/apps/base/immich/kustomization.yaml
@@ -2,21 +2,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: redirector
+namespace: immich
 
 resources:
   - resources/certificate.yaml
   - resources/deployment.yaml
   - resources/ingressroute.yaml
-  - resources/middleware.yaml
   - resources/namespace.yaml
   - resources/networkpolicy.yaml
+  - resources/persistentvolume.yaml
   - resources/peerauthentication.yaml
+  - resources/persistentvolumeclaim.yaml
   - resources/service.yaml
   - resources/sopssecret.yaml
-
-configMapGenerator:
-  - files:
-      - configs/nginx.conf
-      - configs/redirect.js
-    name: redirector-nginx
