--- a/apps/tombstone/kustomization.yaml
+++ b/apps/tombstone/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  # - ../base/kiali
+  - ../base/kiali
   - ../base/redirector
   - ../base/vaultwarden
   - resources/sopssecret.yaml
