--- a/infrastructure/configs/istio-system.yaml
+++ b/infrastructure/configs/istio-system.yaml
@@ -2,7 +2,8 @@
 apiVersion: security.istio.io/v1
 kind: PeerAuthentication
 metadata:
-  name: media-server
+  name: default
+  namespace: istio-system
 spec:
   mtls:
     mode: STRICT
