Fix Flux webhook certificate

--- a/clusters/tombstone/flux-system/kustomization.yaml
+++ b/clusters/tombstone/flux-system/kustomization.yaml
@@ -11,6 +11,9 @@ resources:
 
 patches:
   - patch: |
+      - op: add
+        path: /spec/revisionHistoryLimit
+        value: 0
       - op: replace
         path: /spec/template/spec/containers/0/resources
         value: {}
