--- a/infrastructure/configs/flux-webhook.yaml
+++ b/infrastructure/configs/flux-webhook.yaml
@@ -1,17 +1,4 @@
 ---
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: tombstone-osborn-io
-  namespace: flux-system
-spec:
-  dnsNames:
-    - tombstone.osborn.io
-  issuerRef:
-    kind: ClusterIssuer
-    name: letsencrypt-production
-  secretName: tombstone-osborn-io-tls
----
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -29,8 +16,7 @@ spec:
         - name: notification-controller
           port: 80
   tls:
-    secretName: tombstone-osborn-io-tls
----
+    certResolver: letsencrypt
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
@@ -46,21 +32,3 @@ spec:
       - 192.30.252.0/22
       - 2606:50c0::/32
       - 2a0a:a440::/29
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: allow-acme-solver
-  namespace: flux-system
-spec:
-  ingress:
-    - from:
-        - namespaceSelector: {}
-      ports:
-        - port: 8089
-          protocol: TCP
-  podSelector:
-    matchLabels:
-      acme.cert-manager.io/http01-solver: !!str true
-  policyTypes:
-    - Ingress
