--- a/apps/tombstone/resources/sopssecret.yaml
+++ b/apps/tombstone/resources/sopssecret.yaml
@@ -1,6 +1,39 @@
 apiVersion: isindir.github.com/v1alpha3
 kind: SopsSecret
 metadata:
+  name: gitea-admin
+  namespace: gitea
+spec:
+  secretTemplates:
+    - name: ENC[AES256_GCM,data:Jd+TQBhR5+ujQm4I3Ct1d+E=,iv:SVrzz8jjcZhuQRPKi4NvEi5rquynX9keBf0eBBVZ6bg=,tag:ie5P/iMUewCCo1ZzDg1Zcw==,type:str]
+      stringData:
+        GITEA__OAUTH2__JWT_SECRET: ENC[AES256_GCM,data:UfnrTTqoqtt1lgL6VEM7JMiViVMuvtzMD+yp8RJBmY2eyHK88Qcr3Ntf8A==,iv:mS+2hdbsrsNmxweV/5DLU+FqPijY2/oW9UsEesWXjnI=,tag:Z9HJrnwAjPeNdWf5GhbJ1A==,type:str]
+        GITEA__SECURITY__INTERNAL_TOKEN: ENC[AES256_GCM,data:psp9G0D6PzjQJHSW1CsScYjpHc6utLxKzj/Poa3qqOHh5oPq3FaYowjApKCpFTk2ltFnLV94VwBUrP7j+YjX2QPe0L3y7CA3zUsIvcIEt+unhGUJJMjxa6yUdVsLOgq7mzuuRpdO8czh,iv:WeejZM4v4koxvcOdrP9ty2oJexLdgPqNLu8YpV91jF4=,tag:kMGAHesSoBj4vY9rAWMe+w==,type:str]
+        GITEA__SECURITY__SECRET_KEY: ENC[AES256_GCM,data:/h0xlYwSjAFLv4ZRx7cgTuTB8hf6vuXawzIypOgQJaqUnWokHRa9PU3Y/tFf+2CMdGqah36vVKsCcHJevPVLrw==,iv:lTarHDbFOpkRvgwT2oAFtCltI1yrpYHRvCM5gas5yeY=,tag:AGds74J1/k0YUOiH+fboAA==,type:str]
+        GITEA__SERVER__LFS_JWT_SECRET: ENC[AES256_GCM,data:B0xmCjMs9mpElmbn2YzHwHi6VVctSYasraOsc9dtNLu4Xhicl30iXpDuDQ==,iv:tFZRZgU7txxE6oyO3KE2fQ6C7rV0O6uNx1GURxK4Ng0=,tag:Sr3OAG5P8n6jSfde52xYXQ==,type:str]
+    - name: ENC[AES256_GCM,data:yGXka9xI24Ha1kM10H1mMA==,iv:I2yFuIaR6xPMNB4M1DqTTgYS0Ax16pZaZPcJ8SddamY=,tag:GybHH1JJoealPnZ0jj+iOw==,type:str]
+      stringData:
+        GITEA_ADMIN_PASSWORD: ENC[AES256_GCM,data:CfTAKPi66Sc+NpSRwmzwuA==,iv:G5E2hA/CRS3+GSXpSRwKZCLbFwAPd8ltNyo7UjYXIP8=,tag:M/V1j/DiL0Iz1glOUS/x8g==,type:str]
+        GITEA_ADMIN_USERNAME: ENC[AES256_GCM,data:HWb7irg5Ks3oLVg=,iv:StGoM2X751SRzIPBuPgWnd6JT8BOPK6YunGbY41k1uI=,tag:MhinCBiS3DWfEml+E9uiKg==,type:str]
+sops:
+  age:
+    - recipient: age1cfvwwcvy3qj55kswlwymnvpwuwjymrp7xnjeycxma6qtdzv979qqd3kwue
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZeFhrZFQ5UGhKWTc3dURB
+        Mnc1WVBocko4bHErNk1FSlZUdmtIUEVHSzNvCkN0VUR4MXc2Ym5QNVpXZlJnSFA1
+        UlZONUFRMExDM1RPQlFzZ0xnRTZnRlEKLS0tIHlWV1FXSFVDcVNEVER3WThXckVM
+        U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
+        sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2026-02-21T22:30:42Z"
+  mac: ENC[AES256_GCM,data:E4eL1a0bSCzfQ10rk5cf8A9CqmdRA/GlXvAB4xYophImo9wO3wn/Kiey8wnZ1GVVH9wqgnUOr/UY/fvWo7tUnpahS3YBgfufnXvBqK8FCPDIh8l38qN5K9uiTIcFZ/QT5rG3Upa2gkVAlfoeuIfDbqr3Ut+MpFJEHdjppBwuLTY=,iv:tASNeWwzHnWwWfklBJOz6pmTDxEztk2jF2zQxZsQCYY=,tag:aMOKfjIGO2a8qGqzmYKn8g==,type:str]
+  encrypted_suffix: Templates
+  version: 3.12.0
+---
+apiVersion: isindir.github.com/v1alpha3
+kind: SopsSecret
+metadata:
   name: vaultwarden
   namespace: vaultwarden
 spec:
@@ -22,7 +55,7 @@ sops:
         U1dPeFNSOUlXOEw4eVRBNHRqQ1cwVjgKy99XsZuVgqJlTI6uRSYQ3oxkBQ/SKArN
         sG7VU8QsFcJpPZ7k9O5OJNaMujAvFgSPHkZESRbu8pAjTkpAOvbAUQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-01T23:49:28Z"
-  mac: ENC[AES256_GCM,data:f42glb4kY6guN+YjTiRL6BIXKb97TEAABoZqTBx18W7j9SI9wcMDnw0FtyYiyXMvZzGfpkQ7bhZ8L/a98GC5t70r/yW1Pnni8dkma1hMlcqM63bITV3vgiphFLsCK4r6PqgosmnDlOkERyzvg2MUw7jg0I4OnAE8oEr79rShyd0=,iv:hck/3jJP6WAAKGZpu3kxtL0F/91Lyem+dyC+OfHdHF4=,tag:/0P1yT1RB1PbCb0vF699FA==,type:str]
+  lastmodified: "2026-02-21T22:30:42Z"
+  mac: ENC[AES256_GCM,data:E4eL1a0bSCzfQ10rk5cf8A9CqmdRA/GlXvAB4xYophImo9wO3wn/Kiey8wnZ1GVVH9wqgnUOr/UY/fvWo7tUnpahS3YBgfufnXvBqK8FCPDIh8l38qN5K9uiTIcFZ/QT5rG3Upa2gkVAlfoeuIfDbqr3Ut+MpFJEHdjppBwuLTY=,iv:tASNeWwzHnWwWfklBJOz6pmTDxEztk2jF2zQxZsQCYY=,tag:aMOKfjIGO2a8qGqzmYKn8g==,type:str]
   encrypted_suffix: Templates
-  version: 3.11.0
+  version: 3.12.0
