--- a/infrastructure/controllers/sops-secrets-operator.yaml
+++ b/infrastructure/controllers/sops-secrets-operator.yaml
@@ -12,8 +12,9 @@ spec:
 apiVersion: v1
 kind: Namespace
 metadata:
+  annotations:
+    linkerd.io/inject: disabled
   labels:
-    istio-injection: disabled
     pod-security.kubernetes.io/enforce: restricted
   name: sops
 ---
