--- a/apps/base/gitea/resources/namespace.yaml
+++ b/apps/base/gitea/resources/namespace.yaml
@@ -2,7 +2,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  annotations:
+    linkerd.io/inject: enabled
   labels:
-    istio.io/dataplane-mode: ambient
-    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/enforce: privileged # for linkerd-init
+    pod-security.kubernetes.io/warn: restricted
   name: gitea
