--- a/apps/base/immich/resources/namespace.yaml
+++ b/apps/base/immich/resources/namespace.yaml
@@ -2,8 +2,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  annotations:
+    linkerd.io/inject: enabled
   labels:
-    istio.io/dataplane-mode: ambient
-    pod-security.kubernetes.io/enforce: baseline
+    pod-security.kubernetes.io/enforce: privileged # for linkerd-init
     pod-security.kubernetes.io/warn: restricted
   name: immich
