--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -4,8 +4,7 @@ kind: Kustomization
 
 resources:
   - https://github.com/cert-manager/cert-manager/releases/download/v1.19.2/cert-manager.yaml
-  - https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.4.1/experimental-install.yaml
-  - istio-system.yaml
+  - linkerd.yaml
   - metallb.yaml
   - reloader.yaml
   - sops-secrets-operator.yaml
